public static class AnimatorTriggerKey
{
    // ENEMY ANIMATION KEY
    public static readonly string T_ENEMY_HURT = "ENEMY_HURT";
    public static readonly string T_ENEMY_DIE = "ENEMY_DIE";
    public static readonly string T_ENEMY_ATTACK = "ENEMY_ATTACK";
    // PLAYER ANIMATION KEY
    // B : boolean , T : trigger , F : float
    public static readonly string B_PLAYER_RUN = "ISRUN";
    public static readonly string T_PLAYER_ATTACK_1 = "ATTACK_1";
    public static readonly string T_PLAYER_ATTACK_2 = "ATTACK_2";
    public static readonly string T_PLAYER_ATTACK_3 = "ATTACK_3";
    public static readonly string T_PLAYER_ATTACK_4 = "ATTACK_4";
    public static readonly string T_PLAYER_AIR_ATTACK = "ATTACK_FROM_AIR";
    public static readonly string T_PLAYER_HURT = "HURT";
    public static readonly string T_PLAYER_DIE ="DIE";
    public static readonly string F_PLAYER_Y_VELOCITY = "Y";

}
